# ibox

./: .bochsrc  .bochsrc~  .editorconfig  .gitattributes  .gitignore  About.md  Changes.md  License.md  README.md  Readme.md  Todo.md  bochsrc.txt  build.sh  clang.build  compile-output.txt  cross-compiler.build  cross-compiler.sh  kernel.elf  linker.ld  makefile  meson-log.txt  meson-logs.txt  meson-new.build  meson.build  meson_options.txt  rules32.mk  rules64.mk
clang-build/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  info.map
clang-build/meson-logs/: meson-log.txt
cross-files/: clang32.ini  clang64.ini  cross32.ini  cross64.ini
docs/: BuildingIbox.md  Todo.md
firmware/pc-bios/: boot32.asm  boot64.asm  functions.inc  linker.ld  linker32.ld  linker64.ld  longmode_init.asm  meson.build  multiboot_header.asm  multiboot_header2.asm  multiboot_headers.asm  stub.asm  stub.s
firmware/uefi/: meson.build  uefi.txt
include/: bga.h  kernel.h  multiboot.h  stdint.h  stdio.h  svga.h  terminal.h
iso/boot/: kernel.elf
iso/boot/grub/: eltorito.img  grub.cfg  stage2_eltorito
kernel/: bga.c  gen_image.sh  io.c  kernel.c  lfbvideo.c  meson.build  multiboot.c  serial.c  stdio.c  string.c  terminal.c  vsprintf.c
kernel/arch/x86/: meson.build  stub.s
kernel/arch/x86_64/: meson.build
kernel/include/: bga.h  io.h  kernel.h  lfbvideo.h  multiboot.h  multiboot2.h  serial.h  stdint.h  stdio.h  string.h  terminal.h
old-files/: clang.build  cross-compiler.build  cross.sh  linker.ld  makefile-old  multiboot.h  multiboot_header.asm  rules32.mk  rules64.mk  stdint.h
scripts/: bochs-meson-wrapper.sh  build.sh  qemu-meson-wrapper.sh  run-clang.sh  run-cross.sh
src/: bga.c  kernel.c  meson.build  multiboot.c  stdio.c  stdio.c~  string.c  stub.s  svga.c  terminal.c  vsprintf.c
src/arch/x86/: meson.build  stub.s
src/arch/x86_64/: meson.build
tools/: cross-compiler.sh
tools/docker/: Dockerfile  Readme.md
tools/scripts/: bochs-meson-wrapper.sh  cross-compiler.sh  cross.sh  grub-check.sh  qemu-meson-wrapper.sh  run-clang.sh  run-clang32.sh  run-clang64.sh  run-cross.sh  run-cross32.sh  run-cross64.sh
tools/vagrant/: Vagrantfile  ibox.json  setup.sh
tools/vagrant/.vagrant/bundler/: global.sol
vagrant/: Vagrantfile  cross-compiler.sh  setup.sh
version/: build.ninja  compile_commands.json
version/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  meson-info.json
version/meson-logs/: meson-log.txt
